--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 </head>
 <body>
     <header>
-<<<<<<< Updated upstream
         <h1>My Awesome Portfolio</h1>
-=======
         <h1><nav>
     <ul>
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
     </ul>
 </nav>Welcome to My Portfolio</h1>
->>>>>>> Stashed changes
     </header>
     
     <main>
-        <p>This is my personal website where I showcase my work.</p>
+        <p><section id="about">
+    <h2>About Me</h2>
+    <p>I'm a student learning web development and Git!</p>
+</section>This is my personal website where I showcase my work.</p>
     </main>
 </body>
 </html>
