Added contact section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
         <p><section id="about">
     <h2>About Me</h2>
     <p>I'm a student learning web development and Git!</p>
-</section>This is my personal website where I showcase my work.</p>
+</section>
+<section id="contact">
+    <h2>Contact Me</h2>
+    <p>Email: 800093101@fvtc.edu</p>
+</section>
+This is my personal website where I showcase my work.</p>
     </main>
 <footer>
     <p>&copy; 2025 My Portfolio. All rights reserved.</p>
